--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ ext/mkinstalldirs
 ext/run-tests.php
 ext/.deps
 ext/libtool
+".streamlit/secrets.toml" 
+".streamlit/secrets.toml" 
+".streamlit/secrets.toml" 
+".streamlit/secrets.toml" 
