--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+# --- core app deps ----------------------
 streamlit==1.34.0
 pandas
 requests
 openai
-pinecone-client==2.2.2     # last stable v2 release
-langchain-core==0.2.*
-langchain-community==0.2.*     # tools like SelfQueryRetriever
-langchain-openai==0.2.*
-langchain-pinecone==0.2.*
+pinecone-client==2.2.2        # or 3.x if you already updated code
 python-dotenv
+
+# --- LangChain v0.2 split packages -----
+langchain-core==0.2.1
+langchain-community==0.2.1
+langchain-openai==0.2.1
+langchain-pinecone==0.2.1
+
+# --- pin rich to a safe version --------
+rich<14                       # keeps Streamlit happy
