--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-streamlit==1.34.0
-
-# LangChain packages
-langchain-core==0.2.*
-langchain-community==0.2.*
-langchain-openai==0.2.*
-langchain-pinecone==0.2.*
-
-# Pinecone v3 client
-pinecone>=3.0.0,<4.0.0
-
-# Other dependencies
+streamlit>=1.30.0
+langchain-core>=0.2.0
+langchain-community>=0.2.0
+langchain-openai>=0.2.0
+langchain-pinecone>=0.2.0
+pinecone>=3.0.0
 openai>=1.0.0
 pandas
 requests
