--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ langchain-core>=0.2.0
 langchain-community>=0.2.0
 langchain-openai>=0.2.0
 langchain-pinecone>=0.2.0
-pinecone>=3.0.0
+pinecone-client>=3.0.0,<4.0.0  
 openai>=1.0.0
 pandas
 requests
